--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-
+<meta charset="UTF-8">
 	<meta charset="UTF-8">
 	<meta name="robots" content="index,follow">
 	<meta name="apple-mobile-web-app-capable" content="yes">
