--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" content="A javascript class that animates a numerical value by counting to it.">
 
-	<title>CountUp.js</title>
+	<title>CountUp2.js</title>
 
 	<link rel="stylesheet" type="text/css" href="../inorganik.github.io/assets/css/style.css?v=20171206">
 	<script src="countUp.js"></script>
